# fastapi_template

./: .gitignore  .pylintrc  .yamllint  Dockerfile  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: continuous_deployment.yml
app/: main.py
frontend/templates/: index.html.j2
frontend/templates/add-secret/: secret-url.html.j2
frontend/templates/get-secret/: index.html.j2
scripts/: main.py
src/dep_injection_example/: dep_injection_example.py
src/frontend/: frontend.py
src/health/: health.py
src/secret/: secret.py
src/utilities/: constants.py
tests/dependency_injection_example_api/: test_dependency_injection_example_api.py
tests/frontend/: test_frontend.py
tests/health_api/: test_health_api.py
tests/secret_api/: test_secret_api.py
tests/test_constants/: regexes.py
util/: health_check.py  pyproject_parser.py
