[project]
name = "fastapi-template"
version = "0.1.0"
description = "This is a project used to bootstrap other webservice projects with all the basics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "requests>=2.32.3",
    "rust-just>=1.40.0",
    "toml>=0.10.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "hadolint-coatl>=2.12.0.3",
    "pylint>=3.3.5",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-fastapi-deps>=0.2.3",
    "yamllint>=1.36.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "./src",
    "./scripts",
    "./tests"
]
addopts="--cov --cov-report html --cov-report term-missing --cov-fail-under 80"

[tool.coverage.run]
source = ["src"]
